assets/css/blog/hydra.css
/* just entirely hide some stuff for now while we focus on KS launch */
.gh-head-actions {
    display: none !important;
}

.gh-head-logo img  {
    max-height: 100px !important;
    padding: 0;
    margin-top: 1rem;
    z-index: 100; /* above announcement bar */
}

.gh-head-brand {
    height: auto !important; /* allow taller logo */
}

.is-head-stacked .gh-head-menu::after,
.is-head-stacked .gh-head-menu::before {
    display: none !important;
}

/* put announcement-bar in stacking context with logo, so flame can lick it 🔥📣 */
#announcement-bar-root {
    z-index: 90;
}

.gh-announcement-bar {
    z-index: unset !important;
}

.single-title {
    color: var(--fh-yellow);
}

:is(h1, h2, h3, h4, h5, h6) +
:is(h1, h2, h3, h4, h5, h6) {
    /* allow stacked headers */
    margin-top: calc(1.5rem * var(--content-spacing-multiplier, 1)) !important;
}

h1[id],
h2[id],
h3[id],
h4[id],
h5,
h6 {
    font-variant-caps: all-small-caps;
}

h2[id],
h3[id],
h4[id],
h5[id] {
    color: #f5e788;
    text-align: center;
    font-weight: 500;
    font-variant-caps: all-small-caps;
    letter-spacing: normal !important; /* override Ghost's love of -.01em */
}

/* LEDE */
h3[id] {
    letter-spacing: 0.2em;
}

/* BYLINE */
h4[id] {
    /* titles & authors get some capital letters */
    font-variant-caps: small-caps;
}

h4[id]::before {
    /* titles & authors get some capital letters */
    content: 'by ';
    font-style: italic;
    font-weight: 300;
    font-variant-caps: normal;
}

hr {
    background-color: var(--brand-color);
}

.author {
    display: grid;
    text-align: left;
}

.fancy {
    font-family: var(--font-serif);
    font-variant-caps: all-small-caps;
}

.fancy small {
    font-variant-caps: normal;
    font-weight: lighter;
    font-style: italic;
}

.author-name {
    color: var(--fh-yellow); /* note: inverted in fh-box */
    font-family: var(--font-serif);
}

a.author-name {
    font-weight: 600;
    padding: 0.3em;
    border-radius: 0.5em;
    opacity: 1;
}

.fh-box a.author-name {
    color: var(--darker-gray-color);
}

a.author-name:hover,
.author-index .is-current a {
    background-color: var(--brand-color);
    color: white;
}

h1.toplevel {
    color: var(--brand-color);
}

:is(h2, h3, h4).toplevel {
    color: var(--fh-yellow);
    margin-top: 2rem;
    text-align: left;
    margin-left: 0;
}

a.block {
    display: block !important;
}

.fh-box {
    background-color: var(--fh-yellow);
    --primary-text-color: var(--color-white);
    --darker-gray-color: #222;
    --lighter-gray-color: #444;

    color: var(--primary-text-color);

    border-radius: 2rem;
    padding: 1.5rem;

    text-align: center;
    font-weight: 400;
}

.fh-box h2 {
    font-family: var(--font-serif);
}

.fh-box .author-index {
    padding: 0;
    display: block;
    list-style: none;
}

.fh-box .author-index .author-index-item {
    display: block;
    margin: 0 0.4rem;
    text-align: left;
}

.featured-grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 2rem;
}

.fh-issue-index {
    padding-inline-start: 0;
}

